# dfview

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python_package_testing.yml
dfview/: __init__.py  dfview.py
examples/: showcase.py
tests/: test_basic.py
